# btc_python_miner

./: main.py  pyproject.toml
.config/pip/: pip.conf
